--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="2871482820979272488" data-share-method="host" data-aspect-ratio="1.28351" data-width="100%"><a href="https://tenor.com/view/mochi-pet-mochi-cat-cute-squiddy-gif-2871482820979272488">Mochi Pet GIF</a>from <a href="https://tenor.com/search/mochi-gifs">Mochi GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1>¿Te gustaria salir conmigo a por un Mac Donalds?</h1>
+        
+        <h1>¿Te gustaria salir conmigo a por un Mc Donalds?</h1>
         <p>Si aceptas no te arrepentiras, te lo aseguro</p>
         <div class="btn">
             <a href="si.html">SI</a>
             <a href="no1.html">NO</a>
         </div>
     </div>
+<br>
+<br>
+<br>
+<br>
+    <div>
+        <img src="imagen.jpg" hspace="2" vspace="2" style="float: none;" />
+         
+        </div>
 </body>
 </html>
