--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <br>
 <br>
     <div>
-        <img src="imagen.jpg" hspace="2" vspace="2" style="float: none;" />
+        <img src="" hspace="2" vspace="2" style="float: none;" />
          
         </div>
 </body>
